# tfl-price-visualisations

./: README.md  pyproject.toml  tfl-visualisations.ipynb
.streamlit/: config.toml
data/: CPIH-annual-rate-1989-2024-by-year.csv  SPXHistoricalData.csv  TfLHistoricalFares2000to2025.csv  busAndCoachFares.csv  railFares.csv
data/fares/processed/: combined_transport_fares.csv
data/fares/raw/: TfLHistoricalFares2000to2025.csv  bus_and_coach_fares.csv  rail_fares.csv
data/stocks/: DAX_1970to2025.csv  FTSE100_1970to2025.csv  HangSeng_1980to2025.csv  Nikkei225_1978to2025.csv  combined_indices.csv
data/stocks/processed/: DAX_1987to2025_processed.csv  FTSE100_1985to2025_processed.csv  HangSeng_1985to2025_processed.csv  Nikkei225_1980to2025_processed.csv  SnP500_1980to2025_processed.csv
data/stocks/raw/: SnP500_1980to2025.csv
src/: utils.py
src/dashboard/: app.py
src/notebooks/: preprocessing.ipynb  stock-indeces.ipynb  tfl-visualisations.ipynb
