[tool.poetry]
name = "tfl-price-visualisations"
version = "0.1.0"
description = ""
authors = ["avekassy1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
plotly = "^6.0.1"
notebook = "^7.4.0"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
